# ProcessesCommunicationSystem

./: CMakeLists.txt  README.md  同步通信框架v1.0.0.docx
include/epoll/: EpollEvent.h  IEvent.h
include/messageSynchronize/: interpolation_synchronize.h  message_synchronize.h  multtiple_messages_synchronize.h
include/nodeDiscoveryProtocol/: nodeDiscovery.h
include/pcsProcess/: pcs.h
include/publish/: publisher.h
include/subscribe/: subscriber.h  subscriber2.h
include/time_manage/: time_stamp.h  timer.h  timer_manage.h
include/transport/: transport.h  transport_tcp.h  transport_udp.h
include/utils/: messageProtocal.h
src/: CMakeLists.txt
src/epoll/: CMakeLists.txt  EpollEvent.cpp
src/messageSynchronize/: CMakeLists.txt  interpolation_synchronize.cpp  message_synchronize.cpp  multtiple_messages_synchronize.cpp
src/nodeDiscoveryProtocol/: CMakeLists.txt  nodeDiscovery.cpp
src/pcsProcess/: CMakeLists.txt  pcs.cpp
src/publish/: CMakeLists.txt  publisher.cpp
src/subscribe/: CMakeLists.txt  subscriber.cpp  subscriber2.cpp
src/time_manage/: CMakeLists.txt  time_stamp.cpp  timer.cpp  timer_manage.cpp
src/transport/: CMakeLists.txt  transport_tcp.cpp  transport_udp.cpp
test/discovery_protocol_test/: discovery_test.cpp  timer_test.cpp
test/pcs_test/publisher/: pcs_test.cpp
test/pcs_test/subscriber/: pcs_test.cpp
tools/auto_message_generate/: message_generate.cpp  message_generate.h
tools/topics_viewer/: topic_viewer.h
