CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

PROJECT(pcs)

SET(CMAKE_BUILD_TYPE "Debug")

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lpthread -g -Wall")
ELSE(CMAKE_BUILD_TYPE STREQUAL "Release")
  SET(CMAKE_BUILD_TYPE "Release")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2 -std=c++11 -pthread -g -Wall")
ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")


ADD_SUBDIRECTORY(src)

