CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

PROJECT(pcs)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/epoll EPOLL_SRC)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/epoll)

ADD_LIBRARY(epoll SHARED ${EPOLL_SRC})

#SET_TARGET_PROPERTIES(epoll PROPERTIES CLEAN_DIRECT_OUTPUT 1)

#SET_TARGET_PROPERTIES(epoll PROPERTIES VERSION 1.0 SOVERSION 1)

#INSTALL(TARGETS epoll LIBRARY DESTINATION ${LIBRARY_OUTPUT_PATH})

#ADD_LIBRARY(epoll_static STATIC ${EPOLL_SRC})


#SET_TARGET_PROPERTIES(epoll_static PROPERTIES OUTPUT_NAME "epoll")

#SET_TARGET_PROPERTIES(epoll_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

#INSTALL(TARGET epoll_static ARCHIVE DESTINATION ${LIBRARY_OUTPUT_PATH})
