CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

PROJECT(pcs)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/nodeDiscoveryProtocol DISCOVERY_SRC)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/utils
                    ${PROJECT_SOURCE_DIR}/include/epoll 
                    ${PROJECT_SOURCE_DIR}/include/time_manage
                    ${PROJECT_SOURCE_DIR}/include/transport
		    ${PROJECT_SOURCE_DIR}/include/nodeDiscoveryProtocol)

ADD_LIBRARY(discovery SHARED ${DISCOVERY_SRC})

SET_TARGET_PROPERTIES(discovery PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(discovery PROPERTIES VERSION 1.0 SOVERSION 1)

INSTALL(TARGETS discovery LIBRARY DESTINATION ${LIBRARY_OUTPUT_PATH})

ADD_LIBRARY(discovery_static STATIC ${DISCOVERY_SRC})


SET_TARGET_PROPERTIES(discovery_static PROPERTIES OUTPUT_NAME "discovery")

SET_TARGET_PROPERTIES(discovery_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGET discovery_static ARCHIVE DESTINATION ${LIBRARY_OUTPUT_PATH})

