CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

PROJECT(pcs)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/pcsProcess PCS_SRC)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/utils
                    ${PROJECT_SOURCE_DIR}/include/epoll 
                    ${PROJECT_SOURCE_DIR}/include/time_manage
                    ${PROJECT_SOURCE_DIR}/include/transport
                    ${PROJECT_SOURCE_DIR}/include/nodeDiscoveryProtocol
                    ${PROJECT_SOURCE_DIR}/include/publish
                    ${PROJECT_SOURCE_DIR}/include/subscribe
		    ${PROJECT_SOURCE_DIR}/include/pcsProcess)

ADD_LIBRARY(pcs SHARED ${PCS_SRC})

SET_TARGET_PROPERTIES(pcs PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(pcs PROPERTIES VERSION 1.0 SOVERSION 1)

INSTALL(TARGETS pcs LIBRARY DESTINATION ${LIBRARY_OUTPUT_PATH})

ADD_LIBRARY(pcs_static STATIC ${PCS_SRC})


SET_TARGET_PROPERTIES(pcs_static PROPERTIES OUTPUT_NAME "pcs")

SET_TARGET_PROPERTIES(pcs_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGET pcs_static ARCHIVE DESTINATION ${LIBRARY_OUTPUT_PATH})

