CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

PROJECT(pcs)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/publish PUBLISH_SRC)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/utils
                    ${PROJECT_SOURCE_DIR}/include/epoll 
                    ${PROJECT_SOURCE_DIR}/include/time_manage
                    ${PROJECT_SOURCE_DIR}/include/transport
                    ${PROJECT_SOURCE_DIR}/include/nodeDiscoveryProtocol
		    ${PROJECT_SOURCE_DIR}/include/publish)

ADD_LIBRARY(publish SHARED ${PUBLISH_SRC})

SET_TARGET_PROPERTIES(publish PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(publish PROPERTIES VERSION 1.0 SOVERSION 1)

INSTALL(TARGETS publish LIBRARY DESTINATION ${LIBRARY_OUTPUT_PATH})

ADD_LIBRARY(publish_static STATIC ${PUBLISH_SRC})


SET_TARGET_PROPERTIES(publish_static PROPERTIES OUTPUT_NAME "publish")

SET_TARGET_PROPERTIES(publish_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGET publish_static ARCHIVE DESTINATION ${LIBRARY_OUTPUT_PATH})

