CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

PROJECT(pcs)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/subscribe SUBSCRIBE_SRC)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/utils
                    ${PROJECT_SOURCE_DIR}/include/epoll 
                    ${PROJECT_SOURCE_DIR}/include/time_manage
                    ${PROJECT_SOURCE_DIR}/include/transport
                    ${PROJECT_SOURCE_DIR}/include/nodeDiscoveryProtocol
                    ${PROJECT_SOURCE_DIR}/include/publish
		    ${PROJECT_SOURCE_DIR}/include/subscribe)

ADD_LIBRARY(subscribe SHARED ${SUBSCRIBE_SRC})

SET_TARGET_PROPERTIES(subscribe PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(subscribe PROPERTIES VERSION 1.0 SOVERSION 1)

INSTALL(TARGETS subscribe LIBRARY DESTINATION ${LIBRARY_OUTPUT_PATH})

ADD_LIBRARY(subscribe_static STATIC ${SUBSCRIBE_SRC})


SET_TARGET_PROPERTIES(subscribe_static PROPERTIES OUTPUT_NAME "subscribe")

SET_TARGET_PROPERTIES(subscribe_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGET subscribe_static ARCHIVE DESTINATION ${LIBRARY_OUTPUT_PATH})
