CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

PROJECT(pcs)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/time_manage TIME_SRC)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/utils
		    ${PROJECT_SOURCE_DIR}/include/epoll 
                    ${PROJECT_SOURCE_DIR}/include/time_manage)

ADD_LIBRARY(time SHARED ${TIME_SRC})

SET_TARGET_PROPERTIES(time PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(time PROPERTIES VERSION 1.0 SOVERSION 1)

INSTALL(TARGETS time LIBRARY DESTINATION ${LIBRARY_OUTPUT_PATH})

ADD_LIBRARY(time_static STATIC ${TIME_SRC})


SET_TARGET_PROPERTIES(time_static PROPERTIES OUTPUT_NAME "time")

SET_TARGET_PROPERTIES(time_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGET time_static ARCHIVE DESTINATION ${LIBRARY_OUTPUT_PATH})

