CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

PROJECT(pcs)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/transport TRANSPORT_SRC)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/utils
		    ${PROJECT_SOURCE_DIR}/include/epoll 
                    ${PROJECT_SOURCE_DIR}/include/time_manage
		    ${PROJECT_SOURCE_DIR}/include/transport)

ADD_LIBRARY(transport SHARED ${TRANSPORT_SRC})

SET_TARGET_PROPERTIES(transport PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(transport PROPERTIES VERSION 1.0 SOVERSION 1)

INSTALL(TARGETS transport LIBRARY DESTINATION ${LIBRARY_OUTPUT_PATH})

ADD_LIBRARY(transport_static STATIC ${TRANSPORT_SRC})


SET_TARGET_PROPERTIES(transport_static PROPERTIES OUTPUT_NAME "transport")

SET_TARGET_PROPERTIES(transport_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGET transport_static ARCHIVE DESTINATION ${LIBRARY_OUTPUT_PATH})

